i fixed a lot of things with spacing, and updated pictures as well as embeded my game and flow chart, still working on it

--- a/style.1.css
+++ b/style.1.css
@@ -6,8 +6,10 @@
 
 .Intro {
     Font-size: 20px;
+    padding-left: 25px;
 }
 
 .buttons {
-    padding-left: 1200px;
+    position:absolute;
+    left:650px;
 }
