--- a/style.css
+++ b/style.css
@@ -1,19 +1,17 @@
 .Image1 {
-    width: 500px;
-    height: 400px;
-    transform: rotate(90deg);
+    width: 250px;
+    height: 300px;
 }
 
 .Image2 {
-    width: 500px;
-    height: 400px;
+    width: 300px;
+    height: 250px;
     transform: rotate(90deg);
 }
 
 .Image3 {
-    width: 500px;
-    height: 400px;
-     transform: rotate(270deg);
+    width: 250px;
+    height: 300px;
 }
 
 .PDHS {
@@ -22,10 +20,12 @@
 }
 
 .buttons {
-    padding-left: 975px;
+    position:absolute;
+    left:650px;
 }
 
 .imagatable {
-    position: fixed;
-    bottom: 400px;
+     position:absolute;
+     left:250px;
+     top:200px;
 }
